// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TogglePasswordWidget should render toggle password with type password 1`] = `
<div
  className="btn-group"
>
  <PasswordWidget
    type="password"
    value="foo-1"
  />
  <Action
    available={true}
    bsStyle="default"
    disabled={false}
    icon="talend-locked"
    inProgress={false}
    label=""
    onClick={[Function]}
    tooltipPlacement="top"
  >
    <i
      className="talend-locked"
    />
  </Action>
</div>
`;

exports[`TogglePasswordWidget should render toggle password with type text 1`] = `
<div
  className="btn-group"
>
  <PasswordWidget
    type="text"
    value="foo-2"
  />
  <Action
    available={true}
    bsStyle="default"
    disabled={false}
    icon="talend-unlocked"
    inProgress={false}
    label=""
    onClick={[Function]}
    tooltipPlacement="top"
  >
    <i
      className="talend-unlocked"
    />
  </Action>
</div>
`;
